{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 150,
  "lineage": "cd9d6b92-8d6e-d57c-c76f-7e0c3809749e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "virtega-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:network-acl/acl-075e239209fa1220a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 443
              }
            ],
            "id": "acl-075e239209fa1220a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "183875153028",
            "subnet_ids": [],
            "tags": {
              "Name": "Virtega-NACl-dev"
            },
            "vpc_id": "vpc-0ec59923ad405ee6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Virtega-master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:183875153028:instance/i-05d12fdaf94eeaa53",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d12fdaf94eeaa53",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "virtega-keyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0df60d6235c960860",
            "private_dns": "ip-172-32-1-189.ec2.internal",
            "private_ip": "172.32.1.189",
            "public_dns": "ec2-34-228-75-15.compute-1.amazonaws.com",
            "public_ip": "34.228.75.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0244bd9c67d1f647f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef8dd79232d43723",
            "tags": {
              "Environment": "dev",
              "Name": "Virtega-master-dev",
              "Terraform": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "Virtega-master-dev"
            },
            "vpc_security_group_ids": [
              "sg-015e173d6c5d2cb0b"
            ]
          },
          "dependencies": [
            "module.virtega_sg.aws_security_group.this",
            "module.virtega_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.Virtega-slave",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:183875153028:instance/i-0cc8d879ecfc826a4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc8d879ecfc826a4",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "virtega-keyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-009912fb57a4c0f6c",
            "private_dns": "ip-172-32-1-169.ec2.internal",
            "private_ip": "172.32.1.169",
            "public_dns": "ec2-52-90-223-124.compute-1.amazonaws.com",
            "public_ip": "52.90.223.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02f2d7f3e9118416f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef8dd79232d43723",
            "tags": {
              "Environment": "dev",
              "Name": "Virtega-slave-dev",
              "Terraform": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "Virtega-slave-dev"
            },
            "vpc_security_group_ids": [
              "sg-015e173d6c5d2cb0b"
            ]
          },
          "dependencies": [
            "module.virtega_sg.aws_security_group.this",
            "module.virtega_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.virtega_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:security-group/sg-015e173d6c5d2cb0b",
            "description": "Security group for  Ec2 instance",
            "egress": [],
            "id": "sg-015e173d6c5d2cb0b",
            "ingress": [],
            "name": "virtega-sg-dev-20210113142947321800000001",
            "name_prefix": "virtega-sg-dev-",
            "owner_id": "183875153028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "virtega-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec59923ad405ee6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.virtega_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-1384643929",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-015e173d6c5d2cb0b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.virtega_sg.aws_security_group.this",
            "module.virtega_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.virtega_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "tcp for ec2 ",
            "from_port": 22,
            "id": "sgrule-1139741361",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-015e173d6c5d2cb0b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.virtega_sg.aws_security_group.this",
            "module.virtega_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02aa0a6d16bb58716",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-202-96-180.compute-1.amazonaws.com",
            "public_ip": "52.202.96.180",
            "public_ipv4_pool": "amazon",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "dev",
              "Management": "Terraform",
              "Name": "NatEIP-dev",
              "Owner": "DevOps"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:internet-gateway/igw-09e9427031b211961",
            "id": "igw-09e9427031b211961",
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "dev",
              "Management": "Terraform",
              "Name": "IGW-dev",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0ec59923ad405ee6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02aa0a6d16bb58716",
            "id": "nat-0f0c35cec5e8720b6",
            "network_interface_id": "eni-0a75461e6a0ccc57e",
            "private_ip": "172.32.1.223",
            "public_ip": "52.202.96.180",
            "subnet_id": "subnet-0ef8dd79232d43723",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "dev",
              "Management": "Terraform",
              "Name": "NGW-dev",
              "Owner": "DevOps"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d4bc7fa3dc183d251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f0c35cec5e8720b6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d4bc7fa3dc183d25",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09e9427031b211961",
            "id": "r-rtb-03a16ef4f87ebe3271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a16ef4f87ebe327",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d4bc7fa3dc183d25",
            "owner_id": "183875153028",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "dev",
              "Management": "Terraform",
              "Name": "RouteTablePrivate-dev",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0ec59923ad405ee6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03a16ef4f87ebe327",
            "owner_id": "183875153028",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "dev",
              "Management": "Terraform",
              "Name": "RouteTablePublic-dev",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0ec59923ad405ee6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b26de20dccf9cee",
            "route_table_id": "rtb-0d4bc7fa3dc183d25",
            "subnet_id": "subnet-0fea19207e88e4913"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ce9cd595f9f7cbb",
            "route_table_id": "rtb-0d4bc7fa3dc183d25",
            "subnet_id": "subnet-0dc8fe43a34143b8b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070fde00ec9bf81dc",
            "route_table_id": "rtb-0d4bc7fa3dc183d25",
            "subnet_id": "subnet-0011982483d3ec7e5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4c01f49899d94d3",
            "route_table_id": "rtb-0d4bc7fa3dc183d25",
            "subnet_id": "subnet-073656ee5f3c121fb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0095355dd0613052e",
            "route_table_id": "rtb-03a16ef4f87ebe327",
            "subnet_id": "subnet-0ef8dd79232d43723"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d663f2c13cc6732",
            "route_table_id": "rtb-03a16ef4f87ebe327",
            "subnet_id": "subnet-03257a5a6d9200f32"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:subnet/subnet-0fea19207e88e4913",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.32.5.0/24",
            "id": "subnet-0fea19207e88e4913",
            "map_public_ip_on_launch": false,
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "dev",
              "Management": "Terraform",
              "Name": "vpc-Virtega-dev-db-us-east-1a",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0ec59923ad405ee6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:subnet/subnet-0dc8fe43a34143b8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.32.6.0/24",
            "id": "subnet-0dc8fe43a34143b8b",
            "map_public_ip_on_launch": false,
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "dev",
              "Management": "Terraform",
              "Name": "vpc-Virtega-dev-db-us-east-1b",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0ec59923ad405ee6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:subnet/subnet-0011982483d3ec7e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.32.3.0/24",
            "id": "subnet-0011982483d3ec7e5",
            "map_public_ip_on_launch": false,
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "dev",
              "Management": "Terraform",
              "Name": "vpc-Virtega-dev-private-us-east-1a",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0ec59923ad405ee6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:subnet/subnet-073656ee5f3c121fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.32.4.0/24",
            "id": "subnet-073656ee5f3c121fb",
            "map_public_ip_on_launch": false,
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "dev",
              "Management": "Terraform",
              "Name": "vpc-Virtega-dev-private-us-east-1b",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0ec59923ad405ee6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:subnet/subnet-0ef8dd79232d43723",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.32.1.0/24",
            "id": "subnet-0ef8dd79232d43723",
            "map_public_ip_on_launch": true,
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "dev",
              "Management": "Terraform",
              "Name": "vpc-Virtega-dev-public-us-east-1a",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0ec59923ad405ee6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:subnet/subnet-03257a5a6d9200f32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.32.2.0/24",
            "id": "subnet-03257a5a6d9200f32",
            "map_public_ip_on_launch": true,
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "dev",
              "Management": "Terraform",
              "Name": "vpc-Virtega-dev-public-us-east-1b",
              "Owner": "DevOps"
            },
            "vpc_id": "vpc-0ec59923ad405ee6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183875153028:vpc/vpc-0ec59923ad405ee6d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.32.0.0/16",
            "default_network_acl_id": "acl-01acb190e35671d73",
            "default_route_table_id": "rtb-0c56c876232f29c19",
            "default_security_group_id": "sg-09699a7064e2cccd3",
            "dhcp_options_id": "dopt-1d397f67",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ec59923ad405ee6d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c56c876232f29c19",
            "owner_id": "183875153028",
            "tags": {
              "AppName": "n/a",
              "Autoshutdown": "n/a",
              "BU": "DevOps-Inf",
              "Backup": "n/a",
              "CostAllocation": "n/a",
              "Env": "dev",
              "Management": "Terraform",
              "Name": "vpc-Virtega-dev",
              "Owner": "DevOps"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}